# joshgone

./: .gitignore  LICENSE  Procfile  README.md  admin.py  brucechant.py  censor.py  chant.py  database.py  exec.py  gee.py  get.py  hatch.toml  info.py  joshgone.py  jsonfast.py  music.py  online_sequencer_download.py  online_sequencer_get_note_infos.py  online_sequencer_make_chunks.py  onlinesequencer_settings.json  patched_player.py  protobufast.py  pyproject.toml  remind.py  repl.py  requirements-os.txt  requirements-soundit.txt  requirements.txt  run.bat  self.py  solver.py  sort.py  sound.py  split.py  thicc.py  togochant.py  venv.bat  yoyo.ini
extensions/: admin.py  censor.py  chant.py  cron.py  database.py  exec.py  execbf.py  gee.py  get.py  info.py  jse.py  music.py  relay.py  remind.py  repl.py  self.py  skull.py  solver.py  sort.py  split.py  thicc.py  when.py  yapper.py  yesno.py
migrations/: 20210122_01_iH7wK-initial-tables.py  20210301_01_Rnr8T-chants.py  20210628_01_S6ssq-chant-owner.py
