[project]
name = "joshgone"
description = "A Discord bot with some random commands"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/GeeTransit/joshgone"

[[project.authors]]
name = "George Zhang"
email = "geetransit@gmail.com"

[tool.hatch.version]
source = "vcs"
